[fix][mixin title] modify letter-spacing

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -45,7 +45,7 @@ p {
 @mixin title {
   font-weight: 500;
   font-size: 20px;
-  letter-spacing: 0.15;
+  letter-spacing: 0.5px;
   line-height: 2;
 }
 
